--- a/head.html
+++ b/head.html
@@ -2,3 +2,7 @@
 <script src="/scripts/aem.js" type="module"></script>
 <script src="/scripts/scripts.js" type="module"></script>
 <link rel="stylesheet" href="/styles/styles.css"/>
+<link rel="icon" href="./icons/skelly.png" type="image/x-icon">
+<link rel="apple-touch-icon" sizes="180x180" href="./icons/skelly.png">
+<link rel="icon" type="image/png" sizes="32x32" href="./icons/skelly.png">
+<link rel="icon" type="image/png" sizes="16x16" href="./icons/skelly.png">
